--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-redux": "^5.0.7",
     "react-scripts-ts": "2.14.0",
     "redux": "^3.7.2",
-    "redux-undo": "^0.6.1"
+    "styled-components": "^3.2.3"
   },
   "scripts": {
     "start": "react-scripts-ts start",
